--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<script src="main.js" defer></script>
+	<!-- Favicon -->
+	<link rel="icon" type="image/png" href="src/logo.png"/>
 </head>
 <body class="bg">
 
@@ -29,6 +31,17 @@
 		</div>
 	</nav>
 
+	<!-- Header -->
+
+	<br>
+
+    <div class="jumbotron">
+        <div class="container">
+          	<h1 class="display-3">MBTI Project</h1>
+          	<p>Retrouvez les informations sur votre type à quatre lettres MBTI, ainsi qu'un test afin de vous le découvrir. Apprenez-en plus sur le "Myers-Briggs Type Indicator" et les recherches de Carl Jung ci-dessous:</p>
+          	<p><a class="btn btn-primary btn-lg" href="#" role="button">Qu'est-ce que le MBTI? &raquo;</a></p>
+        </div>
+    </div>
 	<!-- Script du Framework Bootstrap -->
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
