--- a/index.html
+++ b/index.html
@@ -42,7 +42,22 @@
           	<p><a class="btn btn-primary btn-lg" href="#" role="button">Qu'est-ce que le MBTI? &raquo;</a></p>
         </div>
     </div>
+
+    <!-- Footer -->
+    <br>
+    
+    <footer class="bg-light text-center text-lg-start">
+  		<div class="text-center p-3" style="background-color: #e2e2e2">
+    	© 2021 - Toute reproduction interdite.
+    	<br>
+    	Par les recherches de Myers Briggs et Carl Jung.
+    	<br>
+    	Plus d'infos sur le MBTI <a class="text-dark" href="#">ici.</a>
+  		</div>
+	</footer>
+
 	<!-- Script du Framework Bootstrap -->
+	
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 
