--- a/pages/16types.html
+++ b/pages/16types.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Accueil - MBTI Project</title>
+	<title>Les différents types - MBTI Project</title>
 	<!-- Framework: Bootstrap -->
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="../main.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<script src="main.js" defer></script>
 	<!-- Favicon -->
-	<link rel="icon" type="image/png" href="src/logo.png"/>
+	<link rel="icon" type="image/png" href="../src/logo.png"/>
 </head>
 <body class="bg">
 
@@ -24,9 +24,9 @@
 		</a>
 		<div class="navbarLinks">
 			<ul>
-				<li><a href="#">Accueil</a></li>
-				<li><a href="pages/testIndex.html">Passer le test</a></li>
-				<li><a href="pages/16types.html">Les différents types</a></li>
+				<li><a href="../index.html">Accueil</a></li>
+				<li><a href="testIndex.html">Passer le test</a></li>
+				<li><a href="16types">Les différents types</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -39,7 +39,7 @@
         <div class="container">
           	<h1 class="display-3">MBTI Project</h1>
           	<p>Retrouvez les informations sur votre type à quatre lettres MBTI, ainsi qu'un test afin de vous le découvrir. Apprenez-en plus sur le "Myers-Briggs Type Indicator" et les recherches de Carl Jung ci-dessous:</p>
-          	<p><a class="btn btn-primary btn-lg" href="info.html" role="button">Qu'est-ce que le MBTI? &raquo;</a></p>
+          	<p><a class="btn btn-primary btn-lg" href="#" role="button">Qu'est-ce que le MBTI? &raquo;</a></p>
         </div>
     </div>
 
