--- a/info.html
+++ b/info.html
@@ -42,25 +42,91 @@
           	<p>Le MBTI, autrement dit le "Myers-Briggs Type Indicator" est une façon de mettre des mots, ou plutôt des lettres sur votre personnalité.</p>
           	<p>Cela repose sur les travaux de Carl Jung en ce qui concernera tout l'aspect des fonctions de votre type, ainsi que sur ceux de Myers Briggs, qui aura mis en place les lettres plus tard après Jung.</p>
           	<hr>
+
+          	<!-- Partie 1 : Présentation des lettres -->
+
+          		<!-- Extraverti & Introverti -->
+
           	<h1 class="display-6">On compterait 16 types de personnalité MBTI. Ces types se forment d'un total de quatre lettres:</h1>
           	<br>
           	<div class="infoLettres">
           		<img src="src/lettres/extraverti.png"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <img src="src/lettres/introverti.png">
           	</div>
           	<p>Comme le précisent les images ci-dessus, votre introversion ou extraversion sociale sont un facteur de votre type MBTI. Celui-ci est défini par votre fonction cognitive dominante, sujet étudiable plus bas. Cette lettre sera toujours la toute première présente dans votre type, elle sera toujours en première place.</p>
+
+          		<!-- Intuition & Sensation -->
+
           	<div class="infoLettres">
           		<img src="src/lettres/intuition.png"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <img src="src/lettres/sensor.png">
           	</div>
           	<p>Les lettres ci-dessus indiquent les termes "intuition" et "observation", que l'on pourrait aussi appeler "sensation". Intuition indique votre capacité à visualiser les choses dans votre tête, à faire travailler avec succès votre imagination, tandis qu'Observation marque le fait que vous voyez d'abord les faits concrets et réels.</p>
+
+          		<!-- Pensée & Sentiment -->
+
           	<div class="infoLettres">
           		<img src="src/lettres/pensée.png"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <img src="src/lettres/sentiment.png">
           	</div>
           	<p>Ici, Pensée n'est à ne surtout pas confondre avec l'Intuition. Pensée voit les choses logiques et privilégiera ce qui a du sens, tandis que Sentiment cherchera plutôt ce qu'il veut ou ce qu'il aime, ou bien ce que veulent et aiment les autres et bénéficiera de plus de compassion que Pensée, et inversement.</p>
+
+          		<!-- Perception & Jugement -->
+
           	<div class="infoLettres">
           		<img src="src/lettres/prospection.png"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <img src="src/lettres/jugement.png">
           	</div>
           	<p>Les termes prospection et jugement sont bien plus complexes que les autres précédents. En effet, Prospection prouvera ses compétences à pouvoir s'adapter sans souci mais aura du mal à organiser le chaos, contrairement à Jugement qui organisera parfaitement les idées mais aura quelques problèmes lorsqu'il s'agira de s'adapter à une situation ou un imprévu.</p>
+          	<br>
+          	<p>Voici comment se présentent les types du MBTI. Cependant, c'est une manière assez simpliste de les présenter de cette façon. En effet, c'est une version rapide de les appeler comme ceci puisque lorsque l'on donnera leurs noms complets, on utilisera plutôt leurs fonctions cognitives.</p>
           	<hr>
+          	<br>
+
+          	<!-- Partie 2 : Présentation des fonctions -->
+
+          	<h1 class="display-6">Que sont les fonctions qui consitutent un type de personnalité MBTI?</h1>
+          	<br>
+          	<p>Comme cité au-dessus, les lettres servent uniquement à nommer un type MBTI, mais ne servent pas à le déduire, contrairement à ce que font certains sites comme le site de <a href="https://www.16personalities.com/">16personalities.com</a>. Pour déduire un type de personnalité, on cherchera plutôt à deviner les fonctions utilisée par la personne concernée.</p>
+          	<br>
+          	<p>Parmi ces fonctions, on distingue les fonctions introverties et extraverties, notions déjà abordées dans la partie au-dessus, mais également les fonctions de décision et d'observation. Ainsi, le nom d'une fonction d'observation commencera par N ou S, et une fonction de décision commencera par T ou F. En mêlant les fonctions une fonction de décision "sentiments" (F) avec l'introvertisme, on obtient une fonction telle que Fi (Sentiment introverti).</p>
+          	<p>Mais comment ces fonctions influent-elles sur un type MBTI? On commence d'abord par définir chaque fonction. Voyez plutôt:</p>
+          	<br>
+
+          		<!-- Section 1 : Fonctions d'observation -->
+
+          			<!-- Fonctions d'intuition -->
+
+          	<h1 class="display-6" style="font-size: 32px">Fonctions d'observation:</h1>
+          	<br>
+          	<div class="infoLettres">
+          		<img src="src/fonctions/ni.png"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <img src="src/fonctions/ne.png">
+          	</div>
+          	<br>
+          	<p>Comme précisé sur les cadres, Ni signifie intuition introvertie et Ne désigne l'intuition extravertie. Ni est la fonction dominante des INTJ et des INFJ, les deux types jugés les plus rares du MBTI, ils sont tellements peu communs que la majorité du temps, lorsque quelqu'un se proclamera INTJ ou INFJ, une foule de personne déclarera qu'ils se sont faits mal typer. Cela n'arrivera bien-sûr pas avec <a href="pages/testIndex.html">le test du site</a>. La notion de fonction dominante sera traitée plus bas.</p>
+          	<p>Ni désigne la capacité d'organiser des informations, reçues sous formes de visions, prédictions. La fonction définit également la capacité d'obtenir des informations à partir de son monde intérieur. Il n'est pas intéressé par ce qui est, mais par ce qui pourrait être. Fonction dominante de INTJ ainsi que INFJ, plus d'informations <a href="pages/16types.html">ici</a>.</p>
+          	<p>Ne désigne la capacité de toujours acquérir de nouvelles informations grâce à sa conscience et son imagination, tout comme Ni (sauf que lui les organisera), mais sauf que ce sera plus concentré sur dans le monde extérieur. Elle est aussi intéressée par ce qui pourrait être tout comme Ni, malgré le fait que ces deux fonctions restent très différentes. Fonction dominante de ENTP ainsi que ENFP, plus d'informations <a href="pages/16types.html">ici</a>.</p>
+          	<br>
+
+          			<!-- Fonctions de sensation -->
+
+          	<div class="infoLettres">
+          		<img src="src/fonctions/si.png"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <img src="src/fonctions/se.png">
+          	</div>
+          	<br>
+          	<p>Si est la contraction de sensation introvertie et Se est celle de sensation extravertie. Ces deux fonctions se baseront sur le monde réel et ses informations. Voyez donc:</p>
+          	<p>Si désigne le fait d'être fasciné par ce qu'apporte les informations du monde réel, ou plutôt ont apporté. Bizarrement Si ressemble plus à Ni que Ne ne pourrait lui ressembler. En effet, Si organise les informations réelles, contrairement à Ni qui traite les informations obtenues par son imagination. Si est la fonction dominante la plus répandue de tout le MBTI. Fonction dominante de ISTJ ainsi que ISFJ, plus d'informations <a href="pages/16types.html">ici</a>.</p>
+          	<p>Quant à Se, tout comme Si, s'attardera sur tout ce qui touche au réel contrairement aux intuitifs qui reposeront leur réflexion sur leur imagination. C'est une fonction d'observation extravertie tout comme Ne. Se contrairement à Si sera concentré sur le monde extérieur mais encore sur ce qui se passe ici, et maintenant, alors qu'un utilisateur de la sensation introvertie basera ses pensées sur ce qu'il s'est passé. Ils seront plus attirés par ce qui peut leur procurer de la sensation. Fonction dominante de ESTP ainsi que ESFP, plus d'informations <a href="pages/16types.html">ici</a>.</p>
+          	<br>
+
+          		<!-- Section 2 : Fonctions de décision -->
+
+          	<h1 class="display-6" style="font-size: 32px">Fonctions de décision:</h1>
+          	<br>
+          	<div class="infoLettres">
+          		<img src="src/fonctions/ti.png"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <img src="src/fonctions/te.png">
+          	</div>
+          	<br>
+          	<div class="infoLettres">
+          		<img src="src/fonctions/fi.png"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <img src="src/fonctions/fe.png">
+          	</div>
+
         </div>
     </div>
 
