--- a/info.html
+++ b/info.html
@@ -83,7 +83,7 @@
 
           	<h1 class="display-6">Que sont les fonctions qui consitutent un type de personnalité MBTI?</h1>
           	<br>
-          	<p>Comme cité au-dessus, les lettres servent uniquement à nommer un type MBTI, mais ne servent pas à le déduire, contrairement à ce que font certains sites comme le site de <a href="https://www.16personalities.com/">16personalities.com</a>. Pour déduire un type de personnalité, on cherchera plutôt à deviner les fonctions utilisée par la personne concernée.</p>
+          	<p>Comme cité au-dessus, les lettres servent uniquement à nommer un type MBTI, mais ne servent pas à le déduire, contrairement à ce que font certains sites comme le site de <a href="https://www.16personalities.com/">16personalities.com</a>. Pour déduire un type de personnalité, on cherchera plutôt à deviner les fonctions utilisées par la personne concernée.</p>
           	<br>
           	<p>Parmi ces fonctions, on distingue les fonctions introverties et extraverties, notions déjà abordées dans la partie au-dessus, mais également les fonctions de décision et d'observation. Ainsi, le nom d'une fonction d'observation commencera par N ou S, et une fonction de décision commencera par T ou F. En mêlant les fonctions une fonction de décision "sentiments" (F) avec l'introvertisme, on obtient une fonction telle que Fi (Sentiment introverti).</p>
           	<p>Mais comment ces fonctions influent-elles sur un type MBTI? On commence d'abord par définir chaque fonction. Voyez plutôt:</p>
@@ -117,15 +117,29 @@
 
           		<!-- Section 2 : Fonctions de décision -->
 
+          			<!-- Fonctions de pensée -->
+
           	<h1 class="display-6" style="font-size: 32px">Fonctions de décision:</h1>
           	<br>
           	<div class="infoLettres">
           		<img src="src/fonctions/ti.png"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <img src="src/fonctions/te.png">
           	</div>
           	<br>
+          	<p>Que sont Ti et Te? Des fonctions de décision. Ti désigne la pensée introvertie tandis que pour le cas de Te il s'agit de la pensée extravertie. Etudions ces deux fonctions à la loupe:</p>
+          	<p>Ti, la pensée introvertie, est une fonction ayant besoin d'avoir des faits logiques, ce qui est marqué par le T dans le nom de la fonction. Un utilisateur de Ti aura besoin de prendre des décisions qui correspondent à leur propre logique, leur propre identité. Ils seront souvent incompris par les autres, car tout le monde ne comprend pas leur logique à eux. Pour résumer, ils pensent par eux-mêmes, et ils auront beaucoup du mal à expliquer leur sens et théories. Fonction dominante de INTP ainsi que ISTP, plus d'informations <a href="pages/16types.html">ici</a>.</p>
+          	<p>Et pour le cas de Te? Te est une fonction de décision extravertie, c'est-à-dire qu'elle cherchera à se faire en quelque sorte "valider", accepter par les autres. Leur manière de le faire sera de se faire comprendre par les autres, en se rendant utile. Ti et Te sont deux fonctions de décision, il leur font donc de la logique. Te est une fonction qui cherchera toujours à savoir ce que les gens pensent avec leurs raisons. Fonction dominante de ENTJ ainsi que ESTJ, plus d'informations <a href="pages/16types.html">ici</a>.</p>
+          	<br>
+
+          			<!-- Fonctions de sentiment -->
+
           	<div class="infoLettres">
           		<img src="src/fonctions/fi.png"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <img src="src/fonctions/fe.png">
           	</div>
+          	<br>
+          	<p>Fi et Fe, des fonctions de décision tournées sur l'aspect sentimental, de l'envie et des émotions. Qu'est-ce qui les différencie? Voyez plutôt:</p>
+          	<p>Fi signifie le sentiment introverti comme indiqué ci-dessus. C'est à la fois une des fonctions les plus simples à comprendre mais aussi la plus difficile à reconnaître. Pourquoi? Parce que Fi fait tout simplement ce qu'il aime et ne fait pas ce qu'il n'aime pas, tout simplement. Avec cette définition je vous arrête tout de suite, vous n'êtes pas forcément un utilisateur de Fi. Cela se mesure au degré près. Tout le monde a certaines envies mais celles de Fi se démarqueront plus. Fonction dominante de INFP ainsi que ISFP, plus d'informations <a href="pages/16types.html">ici</a>.</p>
+          	<p>Fe désigne le sentiment extraverti. Cette fonction ressemble énormément à Te mais reste tout de même assez différente. Elle y ressemble dans le sens où ils chercheront également la validation d'autrui. Cependant, contrairement à Te, l'utilisateur de Fe cherchera à se faire aimer, pas se faire comprendre, pour faire simple. Fonction dominante de ENFJ ainsi que ESFJ, plus d'informations <a href="pages/16types.html">ici</a>.</p>
+          	<br>
 
         </div>
     </div>
